# torus

./: .clang-format  .gitignore  CMakeConfig_Windows.cmake  CMakeLists.txt  CMakeSources.cmake  ODBSources.cmake  README.md  main.cpp  shell.cpp  shell.h
cmake/: FindPQXX.cmake  UseODB.cmake  conanfile.txt
config/: torus.ini
config/scripts/: torus_admin.tscp  torus_book.tscp  torus_defs.tscp  torus_dialog.tscp  torustables.tscp
contrib/: book_rewriter.py  defname_rewriter.py
core/: config.cpp  config.h  errors.cpp  errors.h  slave.cpp  slave.h  torus.cpp  torus.h  types.h
db/: db_manager.cpp  db_manager.h  torus_db_object.cpp  torus_db_object.h  torus_db_table.cpp  torus_db_table.h  torus_pg_transaction.cpp  torus_pg_transaction.h
debug/: callstack.cpp  callstack.h  debug.cpp  debug.h  info.h
debug_support/: callstack.cpp  callstack.h  debug.cpp  debug.h
game/: account.cpp  account.h  accounts_manager.cpp  accounts_manager.h  artifact.cpp  artifact.h  char.cpp  char.h  client.cpp  client.h  coord_point.cpp  coord_point.h  enums.h  item.cpp  item.h  server.cpp  server.h  uid.cpp  uid.h  uid_manager.cpp  uid_manager.h  word_object_container.h  world_object_container.cpp  world_object_container.h
game/chars/: char_props.cpp  char_props.h  char_stats.cpp  char_stats.h
game/clients/: cliloc.cpp  cliloc.h  cliloc_variant.cpp  cliloc_variant.h  tooltip.cpp  tooltip.h
game/uo_files/: idx_entry.h  map.cpp  map.h  map_block.h  map_list.cpp  map_list.h  map_point.cpp  map_point.h  static_tile.cpp  static_tile.h  tiledata.cpp  tiledata.h  uo_file_manager.cpp  uo_file_manager.h  uo_file_reader.cpp  uo_file_reader.h
include/odb/: Makefile.am  Makefile.in  common-query.cxx  common-query.hxx  common.cxx  common.hxx  context.cxx  context.hxx  context.ixx  cxx-lexer.cxx  cxx-lexer.hxx  cxx-token.hxx  diagnostics.cxx  diagnostics.hxx  emitter.cxx  emitter.hxx  features.hxx  gcc-fwd.hxx  gcc.hxx  generate.hxx  generator.cxx  generator.hxx  header.cxx  include.cxx  inline.cxx  instance.cxx  instance.hxx  libodb-vc12.vcxproj  location.cxx  location.hxx  lookup.cxx  lookup.hxx  odb.cxx  option-functions.cxx  option-functions.hxx  option-parsers.hxx  option-types.cxx  option-types.hxx  options.cli  options.cxx  (+23 more)
include/odb/pgsql/: Makefile.am  Makefile.in  auto-handle.cxx  auto-handle.hxx  binding.hxx  config.h.in  connection-factory.cxx  connection-factory.hxx  connection.cxx  connection.hxx  connection.ixx  container-statements.hxx  container-statements.txx  database.cxx  database.hxx  database.ixx  error.cxx  error.hxx  error.ixx  exceptions.cxx  exceptions.hxx  forward.hxx  libodb-pgsql-vc10.vcxproj  libodb-pgsql-vc11.vcxproj  libodb-pgsql-vc11.vcxproj.filters  libodb-pgsql-vc12.vcxproj  libodb-pgsql-vc8.vcproj  libodb-pgsql-vc9.vcproj  no-id-object-result.hxx  no-id-object-result.txx  no-id-object-statements.hxx  no-id-object-statements.txx  pgsql-fwd.hxx  pgsql-oid.hxx  pgsql-types.hxx  polymorphic-object-result.hxx  polymorphic-object-result.txx  polymorphic-object-statements.hxx  polymorphic-object-statements.txx  prepared-query.cxx  (+40 more)
include/odb/relational/: changelog.cxx  common-query.cxx  common-query.hxx  common.cxx  common.hxx  common.txx  context.cxx  context.hxx  context.ixx  generate.hxx  header.cxx  header.hxx  inline.cxx  inline.hxx  model.cxx  model.hxx  processor.cxx  processor.hxx  schema-source.cxx  schema-source.hxx  schema.cxx  schema.hxx  source.cxx  source.hxx  validator.cxx  validator.hxx
include/odb/semantics/: class-template.cxx  class-template.hxx  class.cxx  class.hxx  derived.cxx  derived.hxx  elements.cxx  elements.hxx  elements.ixx  enum.cxx  enum.hxx  fundamental.cxx  fundamental.hxx  namespace.cxx  namespace.hxx  relational.hxx  template.cxx  template.hxx  union-template.cxx  union-template.hxx  union.cxx  union.hxx  unit.cxx  unit.hxx
include/odb/traversal/: class-template.cxx  class-template.hxx  class.cxx  class.hxx  derived.cxx  derived.hxx  elements.cxx  elements.hxx  enum.cxx  enum.hxx  fundamental.hxx  namespace.hxx  relational.hxx  template.cxx  template.hxx  union-template.cxx  union-template.hxx  union.hxx  unit.hxx
include/pqxx/: LibPQXXSources.cmake  basic_connection  basic_connection.hxx  binarystring  binarystring.cxx  binarystring.hxx  compiler-internal.hxx  compiler-public.hxx  connection  connection.cxx  connection.hxx  connection_base  connection_base.cxx  connection_base.hxx  connectionpolicy  connectionpolicy.hxx  cursor  cursor.cxx  cursor.hxx  dbtransaction  dbtransaction.cxx  dbtransaction.hxx  errorhandler  errorhandler.cxx  errorhandler.hxx  except  except.cxx  except.hxx  field  field.cxx  field.hxx  isolation  isolation.hxx  largeobject  largeobject.cxx  largeobject.hxx  nontransaction  nontransaction.cxx  nontransaction.hxx  notification  (+50 more)
include/win_flex-bison/: FlexLexer.h
network/: crypto.cpp  crypto.h  huffman_compression.cpp  huffman_compression.h  networkmanager.cpp  networkmanager.h  npacket.cpp  npacket.h  nsocket.cpp  nsocket.h  packet.cpp  packet.h  packetin.cpp  packetin.h  packetlist.h  packetlist_0x02.cpp  packetlist_0x21.cpp  packetlist_0x22.cpp  packetlist_0xe.cpp  packetout.cpp  packetout.h  readme.md  socket.cpp  socket.h
network/packets/: packetlist.h  packetlist_0x0.cpp  packetlist_0x02.cpp  packetlist_0x21.cpp  packetlist_0x22.cpp  packetlist_0x55.cpp  packetlist_0x73.cpp  packetlist_0x80.cpp  packetlist_0x82.cpp  packetlist_0x8c.cpp  packetlist_0x91.cpp  packetlist_0xa0.cpp  packetlist_0xa8.cpp  packetlist_0xa9.cpp  packetlist_0xb9.cpp  packetlist_0xe.cpp  packetlist_0xef.cpp
parser/: ast.cpp  ast.h  compiler.cpp  compiler.h  tscp.l  tscp.y  tscp_parser.cpp  tscp_parser.h  tscp_scanner.cpp  tscp_scanner.h
parser/ast/: arithmetic.cpp  arithmetic.h  ast.cpp  ast.h  ast_garbage_collector.cpp  ast_garbage_collector.h  base.cpp  base.h  defname.cpp  defname.h  resources.cpp  resources.h  visitor.cpp  visitor.h
threads/: cond.cpp  cond.h  mutex.cpp  mutex.h  thread.cpp  thread.h  thread_defines.h  utils.cpp  utils.h
tpu/: data.cpp  data.h  defname.cpp  defname.h  symbol.cpp  symbol.h
(+175 files in other folders)
